--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-34.0.2.tar.gz",
     "react-native-auto-height-image": "^1.0.5",
     "react-native-gesture-handler": "~1.3.0",
+    "react-native-paper": "^3.10.1",
     "react-native-reanimated": "~1.1.0",
     "react-native-screens": "1.0.0-alpha.22",
     "react-native-swiper": "^1.5.14",
